--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "debug": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "express-validation": "1.0.3",
     "helmet": "^3.23.3",
     "http": "^0.0.1-security",
